[package]
name = "sqlite_pages"
version = "0.3.1"
edition = "2021"
publish = true
description = "Page-level SQLite database access using sqlite_dbpage virtual table"
license = "MIT OR Apache-2.0"
repository = "https://github.com/halzy/sqlite_pages"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
keywords = ["sqlite", "database"]
categories = ["database"]

[dependencies]
rusqlite = { version = "0.37", default-features = false, features = [
    "bundled",
] }
snafu = "0.8.4"
tokio = { version = "1.41.1", default-features = false, features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
sqlite_test_utils = "0.2.0"
tempfile = "3.17.1"
proptest = "1.5"
